<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ru.bimlibik.pictureswitcher.ui.picture_detail.PictureDetailViewModel" />
        <variable
            name="item"
            type="ru.bimlibik.pictureswitcher.data.Picture" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            android:layout_alignParentTop="true"
            android:elevation="8dp"
            app:custom_color="@{item.color}">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorScrim"
            android:elevation="8dp"
            android:visibility="@{viewModel.showScrim ? View.VISIBLE : View.GONE}"
            android:clickable="@{viewModel.showScrim}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:elevation="8dp"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_image"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_default"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_picture_not_found"
                android:textSize="24sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:picture_preview="@{item.pictureLink}"
            app:error="@{errorLayout}"
            android:contentDescription="@string/content_description_default"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:padding="16dp"
            android:background="@color/colorScrim">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@{String.format(@string/label_author, item.author.name)}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/btn_details"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/state_info"
                    android:onClick="@{()-> viewModel.showAuthorProfile(item.authorProfileLink, item.author.name)}"
                    android:contentDescription="@string/content_description_author_profile"/>

                <ImageView
                    android:id="@+id/btn_favorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:src="@{viewModel.isFavorite ? @drawable/state_favorite_fill : @drawable/state_favorite}"
                    android:onClick="@{()-> viewModel.updateFavorite()}"
                    android:contentDescription="@string/content_description_favorite" />

                <ImageView
                    android:id="@+id/btn_wallpaper"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/state_check"
                    android:onClick="@{()-> viewModel.setPictureAsWallpaper()}"
                    android:contentDescription="@string/content_description_wallpaper"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>